--- a/TimCole_project/locksmith_app/templates/locksmith_app/services.html
+++ b/TimCole_project/locksmith_app/templates/locksmith_app/services.html
@@ -185,7 +185,7 @@
                               <div class="card-header"></div>
                                 <div class="card-body">
                                   <h5 class="card-title">Safe and vault opening, repair and installation.</h5>
-                                  <p class="card-text">TimCole_Locksmith does indoor and outdoor vault and safe installations as well as vault repairs and unloacking service.FOr the Unlocking and Repair of Safes, give Us a call and We will be on it.</p>
+                                  <p class="card-text">TimCole_Locksmith does indoor and outdoor vault and safe installations as well as vault repairs and unloacking service.For the Unlocking and Repair of Safes, give us a call and We will be on it.</p>
                                 </div>
                      </div></span></div>
         <div class="col-lg-4 col-xs-6 thumbnail"><span>
