--- a/TimCole_project/locksmith_app/templates/locksmith_app/base.html
+++ b/TimCole_project/locksmith_app/templates/locksmith_app/base.html
@@ -14,43 +14,47 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{% static 'css/Tim-base.css' %}">
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-869f7782-ccd4-43f9-a40f-8a2556cf0cca"></div>
+
 
       {% comment %} <link rel="stylesheet" href="{% static 'css/services.css' %}"> {% endcomment %}
   <header class="page_header container-fluid header-distributed">
-    <nav class="navbar navbar-expand navbar fixed-top navbar-dark navigation">
+    <nav class="navbar navbar-expand-lg navbar-fixed-top navbar-dark navigation">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <span><img src="{% static 'images/logotim cole.png' %}" class="d-inline-block" width="280" height="150" alt="{% static 'images/lock.gif' %}" loading="lazy"></span>
         <span class="navbar-brand navbar-text">
-          <a class="nav-link navbar-brand" href="{% url 'locksmith_app:home' %}"><h5 class= "badge bg-warning text-dark" style="color: #e0ac1c; font-size: 30px; font-style: bold;">TimCole Locksmith</h5></a>
+          <a class="nav-link navbar-brand" href="{% url 'locksmith_app:home' %}"><h5 class= "badge bg-warning text-dark" style="color: #e0ac1c; font-size: 20px; font-style: bold;">TimCole Locksmith</h5></a>
         </span>
         <div class="collapse navbar-collapse" id="navbarText">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active dropdown">
-              <a href="" class="nav-link navbar-brand dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <p style="color: #e0ac1c; font-size: 1em; font-style: bold;">OUR SERVICES</p> <span class="caret"></span></a>
+              <a href="" class="nav-link dropdown" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true"> <p style="color: #e0ac1c; font-size: 20px; font-style: bold;">Our Services</p> <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'locksmith_app:services' %}"><p>Key cut</p></a></li>
-                <li><a href="{% url 'locksmith_app:services' %}"><p>Emergency locksmith services.</p></a></li>
-                <li><a href="{% url 'locksmith_app:services' %}"><p>Mobile locksmith services.</p></a></li>
-                <li><a href="{% url 'locksmith_app:services' %}"><p>Rekeying of residential and commercial locks.</p></a></li>
-                <li><a href="{% url 'locksmith_app:services' %}"><p>High-security lock sales and installation.</p></a></li>
-                <li><a href="{% url 'locksmith_app:services' %}"><p>Residential and commercial door hardware sales and installation.</p></a></li>
-                <li><a href="{% url 'locksmith_app:services' %}"><p>Safe and vault opening, repair and installation.</p></a></li>
-                <li><a href="{% url 'locksmith_app:services' %}"><p>Automobiles Key reprogramming /</p></a></li>
+                <li><a href="{% url 'locksmith_app:services' %}"><p style="color: black; font-size: 1em; font-style: bold; text-align: center;">Key cut</p></a></li>
+                <li><a href="{% url 'locksmith_app:services' %}"><p style="color: black; font-size: 1em; font-style: bold; text-align: center;">Emergency locksmith services</p></a></li>
+                <li><a href="{% url 'locksmith_app:services' %}"><p style="color: black; font-size: 1em; font-style: bold; text-align: center;">Mobile locksmith services</p></a></li>
+                <li><a href="{% url 'locksmith_app:services' %}"><p style="color: black; font-size: 1em; font-style: bold; text-align: center;">Rekeying of residential and commercial locks</p></a></li>
+                <li><a href="{% url 'locksmith_app:services' %}"><p style="color: black; font-size: 1em; font-style: bold; text-align: center;">High-security lock sales and installation</p></a></li>
+                <li><a href="{% url 'locksmith_app:services' %}"><p style="color: black; font-size: 1em; font-style: bold; text-align: center;">Residential and commercial door hardware sales and installation.</p></a></li>
+                <li><a href="{% url 'locksmith_app:services' %}"><p style="color: black; font-size: 1em; font-style: bold; text-align: center;">Safe and vault opening, repair and installation.</p></a></li>
+                <li><a href="{% url 'locksmith_app:services' %}"><p style="color: black; font-size: 1em; font-style: bold; text-align: center;">Automobiles Key reprogramming</p></a></li>
               </ul>
             </li>
             <li class="nav-item active">
-              <a class="nav-link navbar-brand" href="{% url 'locksmith_app:about' %}"><p style="color: #e0ac0a; font-size: 1em; font-style: bold;">ABOUT US</p></a>
+              <a class="nav-link" href="{% url 'locksmith_app:about' %}"><p style="color: #e0ac0a; font-size: 20px; font-style: bold;">About Us</p></a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link navbar-brand" href="{% url 'locksmith_app:contact' %}"><p style="color: #e0ac1c; font-size: 1em; font-style: bold;">CONTACT US</p></a>
+              <a class="nav-link" href="{% url 'locksmith_app:contact' %}"><p style="color: #e0ac1c; font-size: 20px; font-style: bold;">Contact Us</p></a>
             </li>
         </div>
 
 
-        <span class="navbar-brand navbar-text"><a href="{% url 'locksmith_app:contact' %}">Open 24hrs, Call Us:  <img src="{% static 'images/ICON.jpg' %}" alt="" width ="30" width ="30" class= "Call_icon" >  +27 67 676 7136</a>
+        <span class="navbar-text"><a href="{% url 'locksmith_app:contact' %}">Open 24hrs, Call Us:  <img src="{% static 'images/ICON.jpg' %}" alt="" width ="30" width ="30" class= "Call_icon" >  +27 67 676 7136</a>
            <a href="{% url 'locksmith_app:contact' %}">or  <img src="{% static 'images/whatsappicon.webp' %}" width="30" height="30" alt="">  +27 67 676 7136</a></span>
       </div>
     </nav>
@@ -110,11 +114,11 @@
               Locks fitted.
               Transponder keys cut.</p>
 				<div class="footer-icons">
-					<a href="#"><i class="fa fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-twitter"></i></a>
-					<a href="#"><i class="fa fa-instagram"></i></a>
-					<a href="#"><i class="fa fa-linkedin"></i></a>
-					<a href="#"><i class="fa fa-youtube"></i></a>
+					<a href="https://www.facebook.com/Titus1994/"><i class="fa fa-facebook"></i></a>
+					<a href="https://www.facebook.com/Titus1994/ titus facebook"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.facebook.com/Titus1994/ titus facebook"><i class="fa fa-instagram"></i></a>
+					<a href="https://www.facebook.com/Titus1994/ titus facebook"><i class="fa fa-linkedin"></i></a>
+					<a href="https://www.facebook.com/Titus1994/ titus facebook"><i class="fa fa-youtube"></i></a>
 				</div>
 			</div>
 		</footer>
