--- a/TimCole_project/locksmith_app/templates/locksmith_app/index.html
+++ b/TimCole_project/locksmith_app/templates/locksmith_app/index.html
@@ -20,28 +20,28 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="{% static 'images/car-key-fob-not-working-57f182cb5f9b586c35574ca5.jpg' %}" width="1200" height="700" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-sm-block">
             <h5 class= 'display-4' >Are You Locked Out Of Your Car?</h5>
             <p class= 'display-5'>We Are Here To Help You with that.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="{% static 'images/broken_door.jpg' %}" width="1200" height="700" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-sm-block">
             <h5 class= 'display-4'>Broken door handles or locks</h5>
             <p class= 'display-5'>Its a simple fix for us @TimCole_Locksmith.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="{% static 'images/Hand-holding-key-in-ignition.jpeg' %}" width="1200" height="700" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-sm-block">
             <h5 class= 'display-4'>Are Your Keys Stuck or Broken?</h5>
             <p class= 'display-5'>Call Us For Help/ 24 Hours a Day</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="{% static 'images/broken-door.jpg' %}" width="1200" height="700" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-sm-block">
             <h5 class= 'display-4'>Lost Your Home or Office Keys</h5>
             <p class= 'display-5'>Call Us For New Home And Office Security Lock Installations</p>
           </div>
@@ -49,21 +49,21 @@
         <div class="carousel-item">
           <img src="{% static 'images/locked-keys-in-car.jpeg' %}" width="1200" height="700" class="d-block w-100" alt="...">
 
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-sm-block">
             <h5 class= 'display-4'>Accidentally Locked Your Car Keys Inside Your Car.</h5>
             <p class= 'display-5'>We Can Help You Get Them Out Quicky.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="{% static 'images/Have-You-Lost-Your-Car-Keys-Here’s-What-To-Do-Next.jpg' %}" width="1200" height="700" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-sm-block">
             <h5 class= 'display-4'>Lost Both Your Keys to Your Vehicle.</h5>
             <p class= 'display-5'>Give Us A Call And We Can Fix Your Problem with a fresh new set of Keys.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="{% static 'images/wallpaper1.jpg' %}" width="1200" height="700" class="d-block w-100" alt="...">
-          <div class="carousel-caption d-none d-md-block">
+          <div class="carousel-caption d-none d-sm-block">
             <h5 class= 'display-4'>Having problems With Your Car Key Buttons.</h5>
             <p class= 'display-5'>TimCole_Locksmith is Here For You 24hrs a Day.</p>
           </div>
